[metadata]
name = communicate-utils-eventbus
description = PyEcosystem EventBus Tools
long_description = file: README.md
long_description_content_type = text/markdown
author = TOCM
author_email = tocm@spacesheep.com
url = https://
platforms = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
package_dir =
    =src
packages = find_namespace:
install_requires =
    pyhumps
    pydantic~=1.10.2
    kombu~=5.2.4
    boto3~=1.24.69
[options.extras_require]
test =
    celery[sqs,pytest]~=5.2.7
    django>=3.2,<4.2
celery =
    celery[sqs]~=5.2.7
django3 =
    django~=3.2
django4 =
    django~=4.1
django =
    communicate-utils-eventbus[django3]

[options.packages.find]
where = src

[options.entry_points]
ecosystem_events =
    publisher = communicate.utils.eventbus.publisher.AmazonSNSPublisher
    subscriber = communicate.utils.eventbus.subscriber.AmazonSNSSubscriber
    Event = communicate.utils.eventbus.base.Event
