[metadata]
name = communicate-utils-eventbus
description = PyEcosystem EventBus Tools
long_description = file: README.rst
long_description_content_type = text/x-rst
author = TOCM
author_email = tocm@spacesheep.com
url = https://
platforms = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Celery
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Distributed Computing

[options]
python_requires = >=3.8
package_dir =
    =src
packages = find_namespace:
install_requires =
    pyhumps
    pydantic~=1.10.2
    kombu~=5.2.4
    boto3~=1.24.69

[options.extras_require]
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    pytest-asyncio>=0.21.0
    celery[sqs,pytest]~=5.2.7
    django>=3.2,<4.2
    freezegun>=1.2.0
    moto>=4.1.0
celery =
    celery[sqs]~=5.2.7
django3 =
    django~=3.2
django4 =
    django~=4.1
django =
    communicate-utils-eventbus[django3]
dev =
    %(test)s
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0

[options.packages.find]
where = src

[options.entry_points]
ecosystem_events =
    publisher = communicate.utils.eventbus.publisher.AmazonSNSPublisher
    subscriber = communicate.utils.eventbus.subscriber.AmazonSNSSubscriber
    Event = communicate.utils.eventbus.base.Event

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --cov=communicate.utils.eventbus
    --cov-report=term-missing
    --cov-report=xml
    --cov-report=html
markers =
    integration: marks tests as integration tests
    unit: marks tests as unit tests

[coverage:run]
source = communicate.utils.eventbus
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist,*.egg-info
per-file-ignores =
    __init__.py:F401,F403

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
